--- a/package.json
+++ b/package.json
@@ -15,23 +15,23 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
-		"@typescript-eslint/eslint-plugin": "^5.27.0",
-		"@typescript-eslint/parser": "^5.27.0",
-		"eslint": "^8.16.0",
-		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-svelte3": "^4.0.0",
-		"prettier": "^2.6.2",
-		"prettier-plugin-svelte": "^2.7.0",
-		"svelte": "^3.44.0",
-		"svelte-check": "^2.7.1",
-		"svelte-preprocess": "^4.10.7",
-		"tslib": "^2.3.1",
-		"typescript": "^4.7.4",
-		"vite": "^3.1.0",
-		"postcss": "^8.4.14",
-		"postcss-load-config": "^4.0.1",
-		"autoprefixer": "^10.4.7",
-		"tailwindcss": "^3.1.5"
+		"@typescript-eslint/eslint-plugin": "5.42.1",
+		"@typescript-eslint/parser": "5.42.1",
+		"eslint": "8.27.0",
+		"eslint-config-prettier": "8.5.0",
+		"eslint-plugin-svelte3": "4.0.0",
+		"prettier": "2.7.1",
+		"prettier-plugin-svelte": "2.8.0",
+		"svelte": "3.52.0",
+		"svelte-check": "2.9.2",
+		"svelte-preprocess": "4.10.7",
+		"tslib": "2.4.1",
+		"typescript": "4.8.4",
+		"vite": "3.2.3",
+		"postcss": "8.4.18",
+		"postcss-load-config": "4.0.1",
+		"autoprefixer": "10.4.13",
+		"tailwindcss": "3.2.2"
 	},
 	"engines": {
 		"node": ">=16",
